ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/Expressions/parserMemberAccessAfterPostfixExpression1/input.ts.stderr
error[1005]: '.' cannot follow an update expression
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/Expressions/parserMemberAccessAfterPostfixExpression1/input.ts:2:2
  |
2 | a--.toString()
  |  ^^

